src/objects/DFC_Action_Activity__c.object
<CustomObject>
    <description>Links Activities to Selected BSI Focus Areas</description>
    <fields>
        <fullName>Action_Area__c</fullName>
        <label>Action Area</label>
        <referenceTo>DFC_Community_Action_Area__c</referenceTo>
        <relationshipName>Activities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>DFC_Activity__c</referenceTo>
        <relationshipName>Action_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <description>Focus Area</description>
        <formula>Action_Area__r.Action_Area__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Area</label>
        <type>Text</type>
    </fields>
    <label>DFC Focus Area</label>
    <nameField>
        <displayFormat>DFC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFC Focus Area</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>